--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
   padding: 2rem;
 }
 
-@media (max-width: 735px) {
+@media (max-width: 425px) {
   .container {
     box-sizing: border-box;
     height: 1080px;
@@ -206,7 +206,7 @@ body {
   .button {
     position: absolute;
     left: 3%;
-    top: 16%;
+    top: 170px;
   }
 
   .scorecard {
@@ -259,9 +259,9 @@ body {
   }
 
   .contest {
-    margin-top: 50px;
+    margin-top: 5rem;
     margin: 0;
-    width: 375px;
+    width: 300px;
     flex-direction: column;
   }
 
@@ -277,6 +277,14 @@ body {
     padding: 1rem;
     width: 100px;
     margin: auto;
+  }
+
+  .userhand {
+    margin-top: 2rem;
+  }
+
+  .userhand, .computerhand {
+    padding: 0;
   }
   
 }
