--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
 
   .contest {
     margin-top: 5rem;
-    margin: 0;
+    margin-left: 1rem;
     width: 350px;
     flex-direction: column;
   }
