--- a/style.css
+++ b/style.css
@@ -260,8 +260,8 @@ body {
 
   .contest {
     margin-top: 1rem;
-    margin-left: 1rem;
-    width: 350px;
+    margin: 0;
+    width: 400px;
     flex-direction: column;
   }
 
